added readme, init data, refactoring
