# docs/swagger.json
@@ -27,7 +27,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "name",
+                        "description": "Get song by name",
                         "name": "name",
                         "in": "query",
                         "required": true
@@ -56,7 +56,7 @@
                 "summary": "Create song",
                 "parameters": [
                     {
-                        "description": "name",
+                        "description": "Create Song",
                         "name": "song",
                         "in": "body",
                         "required": true,
@@ -88,12 +88,12 @@
                 "summary": "Delete song",
                 "parameters": [
                     {
-                        "description": "name",
-                        "name": "name",
+                        "description": "Delete Song",
+                        "name": "song",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/dto.DeleteSongRequestDTO"
                         }
                     }
                 ],
@@ -117,29 +117,20 @@
                 "summary": "Update song",
                 "parameters": [
                     {
-                        "description": "name",
-                        "name": "name",
+                        "description": "Update Song",
+                        "name": "song",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/dto.UpdateSongRequestDTO"
                         }
                     },
                     {
-                        "description": "group",
-                        "name": "group",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "description": "text",
-                        "name": "text",
-                        "in": "body",
-                        "schema": {
-                            "type": "string"
-                        }
+                        "type": "string",
+                        "description": "Update song name",
+                        "name": "name",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -219,11 +210,11 @@
                 "tags": [
                     "song"
                 ],
-                "summary": "Get Song",
+                "summary": "Get Text Song",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "name",
+                        "description": "Get text song by name",
                         "name": "name",
                         "in": "query",
                         "required": true
@@ -266,6 +257,14 @@
                 }
             }
         },
+        "dto.DeleteSongRequestDTO": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.GetSongResponseDTO": {
             "type": "object",
             "properties": {
@@ -282,6 +281,20 @@
                     "items": {
                         "$ref": "#/definitions/entity.Song"
                     }
+                }
+            }
+        },
+        "dto.UpdateSongRequestDTO": {
+            "type": "object",
+            "properties": {
+                "group": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
                 }
             }
         },
